Updated files for day 3 & 4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,9 @@ members = [
     "assignments/assignment2", 
     "assignments/assignment3",
     "assignments/shared",
+    "backend",
     "capstone"
 ]
 
 [workspace.package]
 edition = "2021"
-
-[dependencies]
-chrono = "0.4.23"
